[package]
name = "graph_csr"
version = "0.2.0"
edition = "2021"
license = "MIT"
author = "Tiago Antunes <tiago.melo.antunes@gmail.com>"
description = "A crate that provides utility functions for manipulating graphs in a CSR format, used as the baseline for constructing powerful graph algorithms."
repository = "https://github.com/TiagoMAntunes/graph_csr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy_mmap = "0.2.3"
rand = "0.8.5"
num-traits = "0.2"
atomic = "0.5"
rayon = "1.5"