[package]
author = "Tiago Antunes <tiago.melo.antunes@gmail.com>"
categories = ["concurrency", "algorithms", "data-structures"]
description = "A crate that provides utility functions for manipulating graphs in a CSR format, used as the baseline for constructing powerful graph algorithms."
edition = "2021"
keywords = ["graph", "csr", "algorithms", "performance", "parallel"]
license = "MIT"
name = "graph_csr"
readme = "README.md"
repository = "https://github.com/TiagoMAntunes/graph_csr"
version = "1.0.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic = "0.5"
byteorder = "1.4"
easy_mmap = "0.3"
num-traits = "0.2"
rand = "0.8.5"
rayon = "1.5"
